2002-05-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/info/data.h:
	* help-converters/info/html.c:
	* help-converters/info/main.c: (main):
	* help-converters/info/parse.c: (read_node), (read_node_contents):
	* help-converters/info/parse.h:
	* help-converters/info/utils.c: (alloc_node), (readbuf_open),
	(readbuf_close), (readbuf_eof), (readbuf_getc), (readbuf_gets):
	* help-converters/info/utils.h:
	fix support for bzip2 info files : bug# 66334

2002-05-13  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.117.0

2002-05-13  Yogeesh MB  <yogeeshappa.mathighatta@wipro.com>

	* libgnome/configure.in, libgnome/acconfig.h,
	libgnome/help_conveters/man/gnome-man2html.c: fixes Bug#76331

2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* schemas/desktop_gnome_peripherals_mouse.schemas:
	Set default values of mouse_acceleration and mouse_threshold
	to -1, which means "use system default".
	
2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* schemas/desktop_gnome_interface.schemas: Add new key for
	statusbar_meter_on_right and set it, by default, to false.

2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* schemas/desktop_gnome_file_views.schemas: Fix tyop.

	* schemas/desktop_gnome_interface.schemas: Add both_horiz to the
	list of valid toolbar styles.

2002-05-05  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in (ALL_LINGUAS): Added pt_BR.

2002-05-04  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) and Vietnamese (vi) to ALL_LINGUAS

2002-05-03  Mikael Hallendal  <micke@codefactory.se>

	* libgnome/gnome-help.c
	(gnome_help_display_desktop): don't free the variables before
	  using them, thanks Satyajit
	- Fixes #79870
	(gnome_help_display_with_doc_id): 
	- always send the full uri to the help browsers. 
	(gnome_help_display_desktop): same.

2002-04-29  Anders Carlsson  <andersca@gnu.org>

	* Release 1.116.0

	* configure.in:
	* libgnome/gnome-init.c: (libgnome_post_args_parse):