@@ -1,2 +1,3 @@
 Makefile
 Makefile.in
+desktop_gnome_background.schemas
