@@ -1,3 +1,5 @@
+
+
 schemadir   = $(GCONF_SCHEMA_FILE_DIR)
 schema_DATA = \
 	desktop_gnome_accessibility_keyboard.schemas		\
@@ -13,6 +15,9 @@ schema_DATA = \
 	desktop_gnome_sound.schemas                             \
 	desktop_gnome_background.schemas			\
 	desktop_gnome_url_handlers.schemas
+
+desktop_gnome_background.schemas: desktop_gnome_background.schemas.in
+	cat desktop_gnome_background.schemas.in | sed -e "s:@PREFIX@:$(prefix):" > desktop_gnome_background.schemas
 
 # don't do this if we are building in eg. rpm
 install-data-local:
