@@ -29,7 +29,7 @@
         <applyto>/desktop/gnome/background/picture_filename</applyto>
         <owner>gnome</owner>
         <type>string</type>
-	<default>/usr/share/nautilus/patterns/dark-gnome.jpg</default>
+	<default>@PREFIX@/share/nautilus/patterns/dark-gnome.jpg</default>
         <locale name="C">
         <short>Picture Filename</short>
         <long>File to use for the background image</long>
