@@ -1,3 +1,12 @@
+Tue May 14 15:44:38 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* schemas/desktop_gnome_background.schemas.in: add prototype file
+	for setting the right $(prefix), #76432
+
+	* schemas/Makefile.am: create desktop_gnome_background.schemas
+
+	* schemas/desktop_gnome_background.schemas: remove file
+
 2002-05-14  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* help-converters/info/data.h:
